--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@
                             <div class="info-text">
                                 <h4>Visit Studio</h4>
                                 <p>Main Bazaar, Singo Village</p>
-                                <p>District Sangrur, Punjab - 148001</p>
+                                <p>District Bathinda, Punjab - 151302</p>
                             </div>
                         </div>
                     </div>
@@ -1784,7 +1784,7 @@
             </div>
             <div class="map-container">
                 <iframe 
-                    src="https://www.google.com/maps/place/Singo,+Punjab+151302/@29.9080116,75.1408781,15z/data=!3m1!4b1!4m15!1m8!3m7!1s0x39173297173abbcd:0xa00033c0a58a5ac8!2sBathinda,+Punjab!3b1!8m2!3d30.210994!4d74.9454745!16zL20vMDJzNWsz!3m5!1s0x39112578d410151d:0x2553759a32dd0c3b!8m2!3d29.9092309!4d75.1589159!16s%2Fg%2F1v93zgcv?hl=en&entry=ttu&g_ep=EgoyMDI2MDIyNC4wIKXMDSoASAFQAw%3D%3Dhttps://www.google.com/maps/place/Singo,+Punjab+151302/@29.9080116,75.1408781,15z/data=!3m1!4b1!4m15!1m8!3m7!1s0x39173297173abbcd:0xa00033c0a58a5ac8!2sBathinda,+Punjab!3b1!8m2!3d30.210994!4d74.9454745!16zL20vMDJzNWsz!3m5!1s0x39112578d410151d:0x2553759a32dd0c3b!8m2!3d29.9092309!4d75.1589159!16s%2Fg%2F1v93zgcv?hl=en&entry=ttu&g_ep=EgoyMDI2MDIyNC4wIKXMDSoASAFQAw%3D%3Dhttps://www.google.com/maps/place/Singo,+Punjab+151302/@29.9080116,75.1408781,15z/data=!3m1!4b1!4m15!1m8!3m7!1s0x39173297173abbcd:0xa00033c0a58a5ac8!2sBathinda,+Punjab!3b1!8m2!3d30.210994!4d74.9454745!16zL20vMDJzNWsz!3m5!1s0x39112578d410151d:0x2553759a32dd0c3b!8m2!3d29.9092309!4d75.1589159!16s%2Fg%2F1v93zgcv?hl=en&entry=ttu&g_ep=EgoyMDI2MDIyNC4wIKXMDSoASAFQAw%3D%3D" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5773.143183672992!2d75.15418228981139!3d29.908022050048125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39112578d410151d%3A0x2553759a32dd0c3b!2sSingo%2C%20Punjab%20151302!5e1!3m2!1sen!2sin!4v1772452283468!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     allowfullscreen="" 
                     loading="lazy">
                 </iframe>
